; ModuleID = '/home/carl/AnghaBench/lab/engine/code/renderercommon/extr_tr_image_jpg.c_RE_SaveJPG.c'
source_filename = "/home/carl/AnghaBench/lab/engine/code/renderercommon/extr_tr_image_jpg.c_RE_SaveJPG.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 (i32*)*, i32 (i8*, i32*, i64)*, i32* (i64)* }

@ri = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @RE_SaveJPG(i8* %0, i32 %1, i32 %2, i32 %3, i32* %4, i32 %5) #0 {
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32*, align 8
  %12 = alloca i32, align 4
  %13 = alloca i32*, align 8
  %14 = alloca i64, align 8
  store i8* %0, i8** %7, align 8
  store i32 %1, i32* %8, align 4
  store i32 %2, i32* %9, align 4
  store i32 %3, i32* %10, align 4
  store i32* %4, i32** %11, align 8
  store i32 %5, i32* %12, align 4
  %15 = load i32, i32* %9, align 4
  %16 = load i32, i32* %10, align 4
  %17 = mul nsw i32 %15, %16
  %18 = mul nsw i32 %17, 3
  %19 = sext i32 %18 to i64
  store i64 %19, i64* %14, align 8
  %20 = load i32* (i64)*, i32* (i64)** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @ri, i32 0, i32 2), align 8
  %21 = load i64, i64* %14, align 8
  %22 = call i32* %20(i64 %21)
  store i32* %22, i32** %13, align 8
  %23 = load i32*, i32** %13, align 8
  %24 = load i64, i64* %14, align 8
  %25 = load i32, i32* %8, align 4
  %26 = load i32, i32* %9, align 4
  %27 = load i32, i32* %10, align 4
  %28 = load i32*, i32** %11, align 8
  %29 = load i32, i32* %12, align 4
  %30 = call i64 @RE_SaveJPGToBuffer(i32* %23, i64 %24, i32 %25, i32 %26, i32 %27, i32* %28, i32 %29)
  store i64 %30, i64* %14, align 8
  %31 = load i32 (i8*, i32*, i64)*, i32 (i8*, i32*, i64)** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @ri, i32 0, i32 1), align 8
  %32 = load i8*, i8** %7, align 8
  %33 = load i32*, i32** %13, align 8
  %34 = load i64, i64* %14, align 8
  %35 = call i32 %31(i8* %32, i32* %33, i64 %34)
  %36 = load i32 (i32*)*, i32 (i32*)** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @ri, i32 0, i32 0), align 8
  %37 = load i32*, i32** %13, align 8
  %38 = call i32 %36(i32* %37)
  ret void
}

declare dso_local i64 @RE_SaveJPGToBuffer(i32*, i64, i32, i32, i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
